k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-service
  namespace: ecommerce-app
  labels:
    app: ecommerce-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: ecommerce-app
